fixed the problem with scrollbar

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -15,6 +15,7 @@
 	.owl-carousel {
 		height: 100%;
 		padding-top: 1px;
+		box-sizing: border-box;
 		
 		.owl-item {
 			text-align: center;
